--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "@nestjs/common": "9.4.0",
     "@nestjs/config": "2.3.1",
     "@nestjs/core": "9.4.0",
-    "@nestjs/mapped-types": "^2.0.4",
+    "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/mongoose": "9.2.2",
     "@nestjs/platform-express": "9.4.0",
     "@nestjs/platform-socket.io": "^9.4.3",
-    "@nestjs/swagger": "^6.3.0",
-    "@nestjs/websockets": "^9.4.3",
+    "@nestjs/swagger": "6.3.0",
+    "@nestjs/websockets": "9.4.3",
     "mongoose": "7.1.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.2.0",
-    "socket.io": "^4.8.1",
-    "tail": "^2.2.6"
+    "socket.io": "4.8.1",
+    "tail": "2.2.6"
   },
   "devDependencies": {
     "@nestjs/cli": "9.4.2",
