--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@nestjs/swagger": "6.3.0",
     "@nestjs/websockets": "9.4.3",
     "mongoose": "7.1.0",
+    "os-utils": "^0.0.14",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.2.0",
     "socket.io": "4.8.1",
+    "systeminformation": "^5.27.11",
     "tail": "2.2.6"
   },
   "devDependencies": {
